WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275607
REGRESSION(
279944@main
): [GStreamer] Build broken with RELEASE_LOG disabled
https://bugs.webkit.org/show_bug.cgi?id=275607
Summary
REGRESSION(279944@main): [GStreamer] Build broken with RELEASE_LOG disabled
Miguel Gomez
Reported
2024-06-18 06:57:06 PDT
The change added calls to mediaPlayerLogger() and mediaPlayerLogIdentifier() that are only defined when RELEASE_LOG is enabled. These calls should probably be enclosed inside an #if !RELEASE_LOG_DISABLED guard.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-06-19 05:12:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29978
EWS
Comment 2
2024-06-19 06:38:32 PDT
Committed
280172@main
(c03ca8dc15f5): <
https://commits.webkit.org/280172@main
> Reviewed commits have been landed. Closing PR #29978 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug