REGRESSION(279944@main): [GStreamer] Build broken with RELEASE_LOG disabled https://bugs.webkit.org/show_bug.cgi?id=275607

Reviewed by Eric Carlson.

Fix build with RELEASE_LOG disabled.

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::MediaPlayerPrivateGStreamer):
(WebCore::MediaPlayerPrivateGStreamer::mediaPlayerWillBeDestroyed):
(WebCore::MediaPlayerPrivateGStreamer::createGSTPlayBin):

Canonical link: https://commits.webkit.org/280172@main